--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
       <version>5.3.8</version>
     </dependency>
 
+    <!-- AOP -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.6</version>
+    </dependency>
+
 
 
 
